-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0 Beta1
-
None
-
Windows 8.1 , VS 2013 64
-
9788c0f47cfae17a39137dec47aa0b9f3f9bedad (3.3.2014, dev, 5.4)
Most likely to occur when:
- Apply https://codereview.qt-project.org/#change,79074 to Active Qt
- Launch browser, type some invalid login name, press enter
- click link to go back
- Click at address line edit , try to type: Note line edit does not have focus
The webbrowser grabs the focus itself, resulting in an WM_SETFOCUS for the AxHostWidget, which Qt translates to the mainwindow in QApplicationPrivate::notifyActiveWindowChange() , which in turn messes up focus handling since the active window never changes.
- relates to
-
QTBUG-25852 ActiveQt: QAxWidget steals keyboard focus
-
- Closed
-
-
QTBUG-41130 Windows: Implement native Internet Explorer in qtwebview
-
- Reported
-
For Gerrit Dashboard: QTBUG-37126 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79105,4 | WIP: Fix focus in Active Qt webbrowser. | stable | qt/qtbase | Status: ABANDONED | 0 | 0 |
79574,1 | Fix focus in Active Qt webbrowser. | dev | qt/qtbase | Status: MERGED | +2 | 0 |